force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPD</fullName>
                <default>true</default>
                <label>OPD</label>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>Teleconsultation</fullName>
            </value>
            <value>
                <fullName>Emergency Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>