force-app/main/default/objects/Appointment__c/fields/Available_From__c.field-meta.xml
<CustomField>
    <fullName>Available_From__c</fullName>
    <formula>Doctor__r.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available From</label>
    <type>Time</type>
</CustomField>