force-app/main/default/objects/Appointment__c/fields/Available_Till__c.field-meta.xml
<CustomField>
    <fullName>Available_Till__c</fullName>
    <formula>Doctor__r.End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Till</label>
    <type>Time</type>
</CustomField>