force-app/main/default/objects/Appointment__c/fields/Days_Doctor_Available__c.field-meta.xml
<CustomField>
    <fullName>Days_Doctor_Available__c</fullName>
    <formula>IF(Doctor__r.Monday__c,&quot;Mon &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Tuesday__c,&quot;Tue &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Wednesday__c,&quot;Wed &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Thursday__c,&quot;Thu &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Friday__c,&quot;Fri &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Saturday__c,&quot;Sat &quot;,&quot;&quot;) &amp;
IF(Doctor__r.Sunday__c,&quot;Sun &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Doctor Available</label>
    <type>Text</type>
</CustomField>