force-app/main/default/objects/Appointment__c/fields/Has_Admission__c.field-meta.xml
<CustomField>
    <fullName>Has_Admission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Admission</label>
    <type>Checkbox</type>
</CustomField>