force-app/main/default/objects/Appointment__c/fields/Selected_Day__c.field-meta.xml
<CustomField>
    <fullName>Selected_Day__c</fullName>
    <label>Selected Day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>