force-app/main/default/objects/Appointment__c/fields/Selected_Slot__c.field-meta.xml
<CustomField>
    <fullName>Selected_Slot__c</fullName>
    <label>Selected Slot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>