force-app/main/default/objects/Appointment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Portal</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Doctor Override</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>