force-app/main/default/objects/Appointment__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>