force-app/main/default/objects/Appointment__c/validationRules/Prevent_Appointment_Beyond_30_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Appointment_Beyond_30_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(Appointment_Date__c)), Appointment_Date__c &gt; TODAY() + 365)</errorConditionFormula>
    <errorDisplayField>Appointment_Date__c</errorDisplayField>
    <errorMessage>Appointment date cannot be more than 365 days from today.</errorMessage>
</ValidationRule>