force-app/main/default/objects/Appointment__c/validationRules/Prevent_Past_Appointment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Appointment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(Appointment_Date__c)), Appointment_Date__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Appointment_Date__c</errorDisplayField>
    <errorMessage>Appointment date cannot be in the past.
Please select today or a future date.</errorMessage>
</ValidationRule>